force-app/main/default/objects/RegulatoryTrxnFeeItem/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Application</fullName>
            </value>
            <value>
                <fullName>Renewal Application</fullName>
            </value>
            <value>
                <fullName>Background check</fullName>
            </value>
            <value>
                <fullName>Service Tax</fullName>
            </value>
            <value>
                <fullName>Duplicate License</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Initial Certification (greater than 1 yr)</fullName>
            </value>
            <value>
                <fullName>Initial Certification (less than 1 yr)</fullName>
            </value>
            <value>
                <fullName>Fingerprint Processing</fullName>
            </value>
            <value>
                <fullName>Certification Renewal</fullName>
            </value>
            <value>
                <fullName>Initial Registration</fullName>
            </value>
            <value>
                <fullName>Renewal Registration</fullName>
            </value>
            <value>
                <fullName>Initial License (greater than 1 yr)</fullName>
            </value>
            <value>
                <fullName>License Renewal</fullName>
            </value>
            <value>
                <fullName>Initial (one time)</fullName>
            </value>
            <value>
                <fullName>Initial Certification</fullName>
            </value>
            <value>
                <fullName>Initial Licensure</fullName>
            </value>
            <value>
                <fullName>Renewal Licensure</fullName>
            </value>
            <value>
                <fullName>Reinstatement Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>