force-app/main/default/objects/RegulatoryTrxnFeeItem/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <label>Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>