force-app/main/default/objects/RegulatoryTrxnFeeItem/fields/Primary_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_GL_Account__c</fullName>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>