force-app/main/default/objects/RegulatoryTrxnFeeItem/fields/Product_Revenue_Source__c.field-meta.xml
<CustomField>
    <fullName>Product_Revenue_Source__c</fullName>
    <label>Product Revenue Source</label>
    <length>20</length>
    <type>Text</type>
</CustomField>